# salt-template

./: .editorconfig  .gitignore  .markdownlint.yaml  .tool-versions  CHANGELOG.md  Pipfile  README.md  pyproject.toml  renovate.json5  tox.ini
.github/workflows/: build.yml  test.yml
_modules/: template.py
_templates/: config.py  env  env.py  sysctl  sysctl.py  systemd  systemd.py  text.py  yaml2  yaml2.py
test/: conftest.py  minion.yaml
test/modules/: test_template.pillar.yaml  test_template.py
test/templates/: test_config.pillar.yaml  test_config.py  test_env.pillar.yaml  test_env.py  test_sysctl.pillar.yaml  test_sysctl.py  test_systemd.pillar.yaml  test_systemd.py  test_text.pillar.yaml  test_text.py  test_yaml2.pillar.yaml  test_yaml2.py
