[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "salt-template"
version = "1.3.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["salt"]

[project.optional-dependencies]
test = ["pylint==3.3.4", "pytest==8.3.5"]

[tool.pdm.dev-dependencies]
dev = ["pylint==3.3.4", "pytest==8.3.5", "ruff==0.9.10", "tox==4.24.1"]

[tool.pdm.resolution.overrides]
pyzmq = "~=25.1" # 25.0.2 does not compile on 24.04 anymore

[tool.pylint.basic]
good-names = "a,b,fd,k,v"

[tool.pylint.variables]
additional-builtins = "__salt__,__opts__,__grains__,__pillar__"

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-imports = true

[tool.pyright]
include = ["_modules", "_templates", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
