[project]
name = "salt-template"
version = "1.3.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["salt<3007.8"]

[project.optional-dependencies]
test = ["pylint~=3.3.6", "pytest~=8.4.0"]

[tool.pylint.basic]
good-names = "a,b,fd,k,v"

[tool.pylint.variables]
additional-builtins = "__salt__,__opts__,__grains__,__pillar__"

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-imports = true

[tool.pyright]
include = ["_modules", "_templates", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "pylint~=3.3.6",
    "pytest~=8.4.0",
    "ruff~=0.12.0",
    "tox~=4.28.0",
    "tox-uv>=1.25.0",
    "uv<0.6.0",
]
