[project]
name = "salt-template"
version = "1.3.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = ["salt"]

[dependency-groups]
test = [
  "pylint~=4.0.4", #
  "pytest~=9.0.2",
]
dev = [
  { include-group = "test" }, #
  "ruff~=0.14.8",
  "tox~=4.28.4",
]

[tool.pylint.basic]
good-names = "a,b,fd,k,v"

[tool.pylint.variables]
additional-builtins = "__salt__,__opts__,__grains__,__pillar__"

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-imports = true

[tool.pyright]
include = ["_modules", "_templates", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
